[COLOR yellow][B]v1.5.6[/B][/COLOR]
* Rename NotificationsWithDownloaderImage.xml to NotificationsWithExtraImage.xml.
* Change function show_notification_with_extra_image to get generic image id and URL.
* Add build skin switch notifcation window on manual build skin switch / first build launch.
[COLOR yellow][B]v1.5.5[/B][/COLOR]
* Wizard auto update - Change dialog progress to BG for smoother wizard update.
[COLOR yellow][B]v1.5.4[/B][/COLOR]
* BUG FIX: First build launch notification doesn't show after installing on existing build.
[COLOR yellow][B]v1.5.3[/B][/COLOR]
* Small Real Debrid Speed Test function refactor.
[COLOR yellow][B]v1.5.2[/B][/COLOR]
* Add Real Debrid Speed Test function (Android/Windows only).
[COLOR yellow][B]v1.5.1[/B][/COLOR]
* Windows kodi auto update - remove open browser, direct download only.
[COLOR yellow][B]v1.5.0[/B][/COLOR]
* Kodi version update - Added verification if custom Kodi APK/Windows software installed.
[COLOR yellow][B]v1.4.9[/B][/COLOR]
* Add support for custom Windows kodi software auto update check (Open browser, direct downloaded commented).
* Refactor code
[COLOR yellow][B]v1.4.8[/B][/COLOR]
* Migrate auto quick update notification URL + settings to custom to avoid default notification vars.
* Enable wizard's default notification settings - show post build install message.
* Remove startup build switch skin popup post build install.
[COLOR yellow][B]v1.4.7[/B][/COLOR]
* Refactor startup.py.
* wizard.py - on build install - enable all addons in build ZIP file.
[COLOR yellow][B]v1.4.6[/B][/COLOR]
* Revert Custom APK Installer code (unnecessary).
[COLOR yellow][B]v1.4.5[/B][/COLOR]
* Downloader notification window - switch to remote image "APK_DOWNLOADER_CODE_IMAGE_URL".
* wizard.py - apk_update_check - Fix yesno dialogs correct buttons order.
[COLOR yellow][B]v1.4.4[/B][/COLOR]
* AUTO BUILD INSTALL ON FIRST LAUNCH - Auto install single build (no prompt), else - open builds menu
[COLOR yellow][B]v1.4.3[/B][/COLOR]