@@ -235,7 +235,6 @@ class Config:
         self.EXTERROR = self.get_setting('errors')
         
         # View variables
-        self.SHOW19 = self.get_setting('show19')
         self.SHOW20 = self.get_setting('show20')
         self.SHOW21 = self.get_setting('show21')
         self.SHOWADULT = self.get_setting('adult')
